src/main/grammars/Matlab.bnf
{
  parserClass="com.gt.intellij.matlab.language.parser.MatlabParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Matlab"
  psiImplClassSuffix="Impl"
  psiPackage="com.gt.intellij.matlab.psi"
  psiImplPackage="com.gt.intellij.matlab.psi.impl"

  elementTypeHolderClass="com.gt.intellij.matlab.psi.MatlabTypes"
  elementTypeClass="com.gt.intellij.matlab.psi.MatlabElementType"
  tokenTypeClass="com.gt.intellij.matlab.psi.MatlabTokenType"

  tokens = [
    NUMBER="regexp:[0-9]+(\.[0-9]+)?([eE][-+]?[0-9]+)?"
    SINGLE_LINE_COMMENT="regexp:%[^\r\n]*"
    SHELL_STRING="regexp:!.*"
    STRING_QUOTED_SINGLE="regexp:'([^'\r\n]|'')*'"
    STRING_QUOTED_DOUBLE='regexp:"([^"\r\n]|"")*"'
    WHITE_SPACE="regexp:[ \t\f]+"
    EOL="regexp:[\r\n\f]+"
  ]
}

matlabFile ::= item_*

private item_ ::= comment
                    | white_space
                    | standalone_expression

private white_space ::= (WHITE_SPACE | EOL)+

comment ::= SINGLE_LINE_COMMENT

private standalone_expression ::= expression WHITE_SPACE? !expression SINGLE_LINE_COMMENT?

private expression ::= string

string ::= SHELL_STRING
            | STRING_QUOTED_SINGLE
            | STRING_QUOTED_DOUBLE
